--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,6 +31,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdyiE1tT4gTzql0OZ8lJIzEk0wQmogvYU" type="text/javascript"></script>
   <div id="root"></div>
   <!--
       This HTML file is a template.
