--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,9 @@
     You need to enable JavaScript to run this app.
   </noscript>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdyiE1tT4gTzql0OZ8lJIzEk0wQmogvYU" type="text/javascript"></script>
+  <script async defer src=`https://maps.googleapis.com/maps/api/js?AIzaSyA3an1xgZCOSSVCDiF7mVxKHsC7uClvrmE&callback=initMap`
+  type="text/javascript"></script>
+  
   <div id="root"></div>
   <!--
       This HTML file is a template.
